@@ -1,3 +1,7 @@
+Sun Aug 20 17:35:00 BST 2000 Olly Betts
+
+	* All external visibility of net/network backend now calls it remote
+
 Sun Aug 20 17:12:00 BST 2000 Olly Betts
 
 	* Started to rename net/network backend to remote (passes make check
